cartopy/docs/v0.21/_sources/gallery/scalar_data/waves.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scalar_data/waves.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_scalar_data_waves.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scalar_data_waves.py:


Filled contours
---------------

An example of contourf on manufactured data.

.. GENERATED FROM PYTHON SOURCE LINES 8-46



.. image-sg:: /gallery/scalar_data/images/sphx_glr_waves_001.png
   :alt: waves
   :srcset: /gallery/scalar_data/images/sphx_glr_waves_001.png
   :class: sphx-glr-single-img





.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    import cartopy.crs as ccrs


    def sample_data(shape=(73, 145)):
        """Return ``lons``, ``lats`` and ``data`` of some fake data."""
        nlats, nlons = shape
        lats = np.linspace(-np.pi / 2, np.pi / 2, nlats)
        lons = np.linspace(0, 2 * np.pi, nlons)
        lons, lats = np.meshgrid(lons, lats)
        wave = 0.75 * (np.sin(2 * lats) ** 8) * np.cos(4 * lons)
        mean = 0.5 * np.cos(2 * lats) * ((np.sin(2 * lats)) ** 2 + 2)

        lats = np.rad2deg(lats)
        lons = np.rad2deg(lons)
        data = wave + mean

        return lons, lats, data


    def main():
        fig = plt.figure(figsize=(10, 5))
        ax = fig.add_subplot(1, 1, 1, projection=ccrs.Mollweide())

        lons, lats, data = sample_data()

        ax.contourf(lons, lats, data,
                    transform=ccrs.PlateCarree(),
                    cmap='nipy_spectral')
        ax.coastlines()
        ax.set_global()
        plt.show()


    if __name__ == '__main__':
        main()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.944 seconds)


.. _sphx_glr_download_gallery_scalar_data_waves.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: waves.py <waves.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: waves.ipynb <waves.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
